--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,10 +4,15 @@
         <meta charset="UTF-8">
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Shopee</title>
+        <title>Thế Giới Di Động</title>
     </head>
     <body>
-        <div id="app"></div>
+        <header>
+            <p>Header</p>
+        </header>
+        <main>
+
+        </main>
     </body>
     <footer>
         <p>Footer</p>
