demo một quy trình chạy fe cho đăng kí đăng nhập (loginscreens và index.css chỉ để chạy demo, không phải chính thức)

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -7,14 +7,6 @@
         <title>Thế Giới Di Động</title>
     </head>
     <body>
-        <header>
-            
-        </header>
-        <main>
-
-        </main>
+        <div id="root"></div>
     </body>
-    <footer>
-        <p>Footer</p>
-    </footer>
 </html>
